...
            Button("CLICK ME") {
                errorTitle = "New Error!!!"
//                showError = true
            }
        }
        .alert(errorTitle ?? "Error", isPresented: Binding(value: $errorTitle)) {
            Button("OK") { }
        }
//        .alert(errorTitle ?? "Error", isPresented: Binding(get: {
//            return errorTitle != nil
//        }, set: { newValue in
//            if !newValue {
//                errorTitle = nil
...
